# data-notebooks

./: .gitignore  README.md  kzoo_streetlight.ipynb  kzoo_streets_project.ipynb
30DayMap2024/: assess.ipynb
duckdb-explore/: basic_notebook.ipynb
kzoo_streetlight/: GeoData_examples.ipynb  colormaps.py  final_data_workflow.html  final_data_workflow.ipynb  kzoo_streets_project.ipynb
kzoo_streetlight/geodata-py-utils/: README.md  pyproject.toml
kzoo_streetlight/geodata-py-utils/geodata_py_utils/: __init__.py
kzoo_streetlight/outputs/: kzoo_m43_analysis.html  kzoo_m43_analysis_light.html  kzoo_m43_analysis_outputs.html  kzoo_m43_analysis_outputs_light.html
