[tool.poetry]
name = "geodata-py-utils"
version = "0.1.0"
description = ""
authors = ["ekerney <kerneyneels@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.2.3"
geopandas = "^1.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
